--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,9 @@ name = "Hrse"
 uuid = "dfa09964-7899-4f24-b5ee-10dc563fda7c"
 authors = ["Luke Bemish <lukebemish@lukebemish.dev>"]
 version = "0.1.0"
+
+[deps]
+StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
+
+[compat]
+StructTypes = "1.10"
