--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Hrse"
+name = "HumanReadableSExpressions"
 uuid = "dfa09964-7899-4f24-b5ee-10dc563fda7c"
 authors = ["Luke Bemish <lukebemish@lukebemish.dev>"]
 version = "0.1.0"
