--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,2 +1,4 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
+Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
